--- a/core/resources/src/main/res/values-hu/strings.xml
+++ b/core/resources/src/main/res/values-hu/strings.xml
@@ -58,7 +58,7 @@
     <string name="restart_app">App újraindítása</string>
     <string name="pick_two_images">Két kép kiválasztása a kezdéshez</string>
     <string name="replace_sequence_number_sub">Ha engedélyezett, kicseréli a hagyományos időbélyeget a kép sorszámára, ha kötegelt feldolgozást használ</string>
-    <string name="image_not_saved">Mentés...</string>
+    <string name="image_not_saved">Mentés…</string>
     <string name="emojis_count">Hangulatjelek száma</string>
     <string name="edit">Szerkesztés</string>
     <string name="unsupported_type">Nem támogatott típus: %1$s</string>
@@ -106,7 +106,7 @@
     <string name="distortion">Torzítás</string>
     <string name="emboss">domborzat</string>
     <string name="customization">Testreszabás</string>
-    <string name="add_tag">Cimke hozzáadása</string>
+    <string name="add_tag">Címke hozzáadása</string>
     <string name="clipboard_paste_invalid_color_code">Érvényes aRGB-kód beillesztése</string>
     <string name="dynamic_colors">Dinamikus színek</string>
     <string name="photo_picker">Képválasztó</string>
@@ -122,12 +122,12 @@
     <string name="filename_not_work_with_photopicker">Az eredeti fájlnév nem adható hozzá, ha a képet képválasztóból választott képet</string>
     <string name="color_filter">Színszűrő</string>
     <string name="by_bytes_resize">Átméretezés súly alapján</string>
-    <string name="clear_exif_sub">A kép minden EXIF adata törölve lessz. Ez nem visszafordítható!</string>
+    <string name="clear_exif_sub">A kép minden EXIF adata törölve lesz. Ez nem visszafordítható!</string>
     <string name="sobel_edge">Sobel-élek</string>
     <string name="single_edit">Egyedüli szerkesztés</string>
     <string name="solarize">Megéget</string>
     <string name="dilation">Tágulás</string>
-    <string name="image_preview_sub">Bármijen kép előnézete: GIF, SVG, és így tovább...</string>
+    <string name="image_preview_sub">Bármijen kép előnézete: GIF, SVG, és így tovább…</string>
     <string name="color_copied">Szín másolva</string>
     <string name="flexible">Rugalmas</string>
     <string name="image_preview">Kép előnézet</string>
