--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -1499,4 +1499,5 @@
     <string name="unknown_host">Cannot access the site, try using VPN or check if the url correct</string>
     <string name="markup_layers">Markup Layers</string>
     <string name="markup_layers_sub">Layers mode with ability to freely place images, text and more</string>
+    <string name="edit_layer">Edit layer</string>
 </resources>
