--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -1500,4 +1500,8 @@
     <string name="markup_layers">Markup Layers</string>
     <string name="markup_layers_sub">Layers mode with ability to freely place images, text and more</string>
     <string name="edit_layer">Edit layer</string>
+    <string name="layers_on_image">Layers on image</string>
+    <string name="layers_on_image_sub">Use image as background and add different layers on top of it</string>
+    <string name="layers_on_background">Layers on background</string>
+    <string name="layers_on_background_sub">The same as first option but with color instead of image</string>
 </resources>
