Add ability to long press setting group to change it's default visibility by #1538

--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -1508,4 +1508,6 @@
     <string name="fast_settings_side">Fast Settings Side</string>
     <string name="fast_settings_side_sub">Add floating strip at chosen side while editing images, which will open fast settings if clicked</string>
     <string name="clear_selection">Clear Selection</string>
+    <string name="settings_group_visibility_hidden">Setting group \"%s\" will be collapsed by default</string>
+    <string name="settings_group_visibility_visible">Setting group \"%s\" will be expanded by default</string>
 </resources>
