--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -1510,8 +1510,8 @@
     <string name="clear_selection">Clear Selection</string>
     <string name="settings_group_visibility_hidden">Setting group \"%s\" will be collapsed by default</string>
     <string name="settings_group_visibility_visible">Setting group \"%s\" will be expanded by default</string>
-    <string name="base_64_conversion">Base64 conversion</string>
-    <string name="base_64_conversion_sub">Decode base64 string to image, or encode image to base64 format</string>
+    <string name="base_64_tools">Base64 Tools</string>
+    <string name="base_64_tools_sub">Decode Base64 string to image, or encode image to Base64 format</string>
     <string name="base_64">Base64</string>
     <string name="not_a_valid_base_64">Pasted string is not a valid Base64 string</string>
     <string name="copy_not_a_valid_base_64">Cannot copy empty or invalid Base64 string</string>
