Improve base64 handling

--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -1517,7 +1517,7 @@
     <string name="copy_not_a_valid_base_64">Cannot copy empty or invalid Base64 string</string>
     <string name="paste_base_64">Paste Base64</string>
     <string name="copy_base_64">Copy Base64</string>
-    <string name="base_64_tips">Load image to copy or save Base64 string, if you have any, you can paste it above to obtain image</string>
+    <string name="base_64_tips">Load image to copy or save Base64 string. If you have the string itself, you can paste it above to obtain image</string>
     <string name="save_base_64">Save Base64</string>
     <string name="share_base_64">Share Base64</string>
     <string name="options">Options</string>
