--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -1524,4 +1524,8 @@
     <string name="actions">Actions</string>
     <string name="import_base_64">Import Base64</string>
     <string name="base_64_actions">Base64 Actions</string>
+    <string name="add_outline">Add Outline</string>
+    <string name="add_outline_sub">Add outline around text with specified color and width</string>
+    <string name="outline_color">Outline Color</string>
+    <string name="outline_size">Outline Size</string>
 </resources>
