--- a/core/resources/src/main/res/values-ru/strings.xml
+++ b/core/resources/src/main/res/values-ru/strings.xml
@@ -1469,4 +1469,46 @@
     <string name="fancy_sub">Пользовательский слайдер с красивым дизайном и анимацией, это слайдер по умолчанию для этого приложения</string>
     <string name="hide">Скрыть</string>
     <string name="show">Показать</string>
+    <string name="center_align_dialog_buttons_sub">Кнопки диалогов будут располагаться по центру, а не слева, если это возможно</string>
+    <string name="open_source_licenses">Лицензии с открытым исходным кодом</string>
+    <string name="open_source_licenses_sub">Просмотр лицензий библиотек с открытым исходным кодом, используемых в этом приложении</string>
+    <string name="area">Область</string>
+    <string name="area_sub">Повторная выборка с использованием отношения площади пикселя. Это может быть предпочтительным методом для прореживания изображений, поскольку он дает результаты без муара. Но когда изображение увеличено, это похоже на метод \"Nearest\".</string>
+    <string name="enable_tonemapping">Включить Tonemapping</string>
+    <string name="enter_percent">Введите %</string>
+    <string name="unknown_host">Невозможно получить доступ к сайту, попробуйте использовать VPN или проверьте правильность URL</string>
+    <string name="markup_layers">Слои разметки</string>
+    <string name="markup_layers_sub">Режим слоев с возможностью свободного размещения изображений, текста и многого другого</string>
+    <string name="edit_layer">Редактировать слой</string>
+    <string name="layers_on_image">Слои на изображении</string>
+    <string name="layers_on_image_sub">Использовать изображение в качестве фона и добавлять различные слои поверх него</string>
+    <string name="layers_on_background">Слои на фон</string>
+    <string name="layers_on_background_sub">То же, что и первый вариант, но с цветом вместо изображения</string>
+    <string name="beta">Бета</string>
+    <string name="fast_settings_side">Сторона быстрых настроек</string>
+    <string name="fast_settings_side_sub">Добавить плавающую полосу на выбранной стороне при редактировании изображений, которая откроет быстрые настройки при нажатии</string>
+    <string name="clear_selection">Очистить выделение</string>
+    <string name="settings_group_visibility_hidden">Группа настроек \"%s\" будет свернута по умолчанию</string>
+    <string name="settings_group_visibility_visible">Группа настроек \"%s\" будет развернута по умолчанию</string>
+    <string name="base_64_tools">Инструменты Base64</string>
+    <string name="base_64_tools_sub">Декодировать Строка Base64 в изображение или кодирование изображения в формат Base64</string>
+    <string name="base_64">Base64</string>
+    <string name="not_a_valid_base_64">Предоставленное значение не является допустимой строкой Base64</string>
+    <string name="copy_not_a_valid_base_64">Невозможно скопировать пустую или недопустимую строку Base64</string>
+    <string name="paste_base_64">Вставить Base64</string>
+    <string name="copy_base_64">Копировать Base64</string>
+    <string name="base_64_tips">Загрузите изображение, чтобы скопировать или сохранить строку Base64. Если у вас есть сама строка, вы можете вставить ее выше, чтобы получить изображение</string>
+    <string name="save_base_64">Сохранить Base64</string>
+    <string name="share_base_64">Поделиться Base64</string>
+    <string name="options">Параметры</string>
+    <string name="actions">Действия</string>
+    <string name="import_base_64">Импортировать Base64</string>
+    <string name="base_64_actions">Действия Base64</string>
+    <string name="add_outline">Добавить обводку</string>
+    <string name="add_outline_sub">Добавляет обводку вокруг текста с указанным цветом и шириной</string>
+    <string name="outline_color">Цвет контура</string>
+    <string name="outline_size">Размер контура</string>
+    <string name="rotation">Вращение</string>
+    <string name="checksum_as_filename">Контрольная сумма как имя файла</string>
+    <string name="checksum_as_filename_sub">Выходные изображения будут иметь имя, соответствующее их контрольной сумме</string>
 </resources>
