Added 59 hashing algorithms from bouncycastle api

--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -1533,4 +1533,5 @@
     <string name="checksum_as_filename_sub">Output images will have name corresponding to their data checksum</string>
     <string name="free_software_partner">Free Software (Partner)</string>
     <string name="free_software_partner_sub">More useful software in the partner channel of Android applications</string>
+    <string name="algorithms">Algorithm</string>
 </resources>
