--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -1534,4 +1534,6 @@
     <string name="free_software_partner">Free Software (Partner)</string>
     <string name="free_software_partner_sub">More useful software in the partner channel of Android applications</string>
     <string name="algorithms">Algorithm</string>
+    <string name="checksum_tools">Checksum Tools</string>
+    <string name="checksum_tools_sub">Compare checksums, calculate hashes, create hex strings from files using different hashing algorithms</string>
 </resources>
