Added ability to add application wide fonts in settings

--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -1549,4 +1549,5 @@
     <string name="difference_sub">Checksums are not equal, file can be unsafe!</string>
     <string name="mesh_gradients">Mesh Gradients</string>
     <string name="mesh_gradients_sub">Look at online collection of Mesh Gradients</string>
+    <string name="wrong_font">Only TTF fonts can be imported</string>
 </resources>
