--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -1555,4 +1555,5 @@
     <string name="imported_fonts">Imported Fonts</string>
     <string name="error_while_saving">Error while saving attempt, try to change output folder</string>
     <string name="filename_is_not_set">Filename is not set</string>
+    <string name="none">None</string>
 </resources>
