--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -1556,4 +1556,6 @@
     <string name="error_while_saving">Error while saving attempt, try to change output folder</string>
     <string name="filename_is_not_set">Filename is not set</string>
     <string name="none">None</string>
+    <string name="custom_pages">Custom Pages</string>
+    <string name="pages_selection">Pages Selection</string>
 </resources>
