Added None, Fill, Fit, FitWidth, FitHeight, Crop scale types for Stack Images tool

--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -1564,4 +1564,6 @@
     <string name="edit_exif_screen_sub">Change metadata of single image without recompression</string>
     <string name="edit_exif_tag">Tap to edit available tags</string>
     <string name="change_sticker">Change Sticker</string>
+    <string name="fit_width">Fit Width</string>
+    <string name="fit_height">Fit Height</string>
 </resources>
