--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -1566,4 +1566,6 @@
     <string name="change_sticker">Change Sticker</string>
     <string name="fit_width">Fit Width</string>
     <string name="fit_height">Fit Height</string>
+    <string name="batch_compare">Batch Compare</string>
+    <string name="pick_files_to_checksum">Pick file/files to calculate it\'s checksum based on selected algorithm</string>
 </resources>
