Added batch checksum comparing by #1610

--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -1568,4 +1568,6 @@
     <string name="fit_height">Fit Height</string>
     <string name="batch_compare">Batch Compare</string>
     <string name="pick_files_to_checksum">Pick file/files to calculate it\'s checksum based on selected algorithm</string>
+    <string name="pick_files">Pick Files</string>
+    <string name="pick_directory">Pick Directory</string>
 </resources>
