Added ability to specify arrow head scale and rotation by #1629

--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -1570,4 +1570,5 @@
     <string name="pick_files_to_checksum">Pick file/files to calculate it\'s checksum based on selected algorithm</string>
     <string name="pick_files">Pick Files</string>
     <string name="pick_directory">Pick Directory</string>
+    <string name="head_length_scale">Head Length Scale</string>
 </resources>
